# registry.pkl

./: .gitignore  .oxfmt.pkl  CONTRIBUTING.md  Cargo.toml  LICENSE  PklProject  PklProject.deps.json  README.md  SECURITY.md  mise.pkl  package.pkl  pnpm-lock.yaml  pnpm-workspace.pkl  root-files.pkl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  family-add.yml  package-release.yml  schema-add.yml
.github/actions/setup-pkl/: action.yml
.github/workflows/: ci.yml  deploy-pages.yml  registry-validate.yml  release-package.yml  release-packages.yml
crates/: README.md
crates/license-check/: Cargo.toml
crates/license-check/src/: lib.rs  main.rs
crates/pkl-reference/: Cargo.toml
crates/pkl-reference/src/: lib.rs  main.rs
crates/registry-validator/: Cargo.toml
crates/registry-validator/src/: lib.rs  main.rs
crates/registry-validator/tests/: integration.rs
crates/release-cut/: Cargo.toml
crates/release-cut/src/: lib.rs  main.rs
crates/release-cut/tests/: integration.rs
crates/search-index/: Cargo.toml
crates/search-index/src/: lib.rs  main.rs
docs/: architecture.md
examples/: aider.pkl  asdf.pkl  azure-pipelines.pkl  babel.pkl  bacon.pkl  biome.pkl  buildkite.pkl  cargo-deny.pkl  cargo-mutants.pkl  cargo.pkl  circleci.pkl  claude-code-mcp.pkl  claude-code-settings.pkl  claude-desktop-mcp.pkl  clippy.pkl  codeium.pkl  codeql-workflow.pkl  codex.pkl  cody.pkl  commitlint.pkl  continue.pkl  cursor-mcp.pkl  deno.pkl  deploy-pages-workflow.pkl  devbox.pkl  devcontainer.pkl  direnv.pkl  docker-compose.pkl  dockerfile.pkl  docusaurus.pkl  drone.pkl  editorconfig.pkl  esbuild.pkl  eslint.pkl  fly.pkl  gemini-cli.pkl  github-actions.pkl  gitlab-ci.pkl  gitleaks.pkl  golangci.pkl  (+71 more)
registry/: README.md
registry-records/target.agent/: 0.1.0.pkl
registry-records/target.ci/: 0.1.0.pkl
registry-records/target.container/: 0.1.0.pkl
registry-records/target.deploy/: 0.1.0.pkl
registry-records/target.docs/: 0.1.0.pkl
registry-records/target.editor/: 0.1.0.pkl
registry-records/target.env/: 0.1.0.pkl
registry-records/target.go/: 0.1.0.pkl
registry-records/target.js/: 0.1.0.pkl
registry-records/target.k8s/: 0.1.0.pkl
registry-records/target.lint/: 0.1.0.pkl
registry-records/target.python/: 0.1.0.pkl
registry-records/target.rust/: 0.1.0.pkl
registry/target.agent/: 0.1.0.json
registry/target.ci/: 0.1.0.json
registry/target.container/: 0.1.0.json
registry/target.deploy/: 0.1.0.json
registry/target.docs/: 0.1.0.json
registry/target.editor/: 0.1.0.json
registry/target.env/: 0.1.0.json
registry/target.go/: 0.1.0.json
registry/target.js/: 0.1.0.json
registry/target.k8s/: 0.1.0.json
registry/target.lint/: 0.1.0.json
registry/target.python/: 0.1.0.json
registry/target.rust/: 0.1.0.json
scripts/: build-publish-layout.sh  normalize-docs-search-index.mjs  package-artifacts.sh  release.sh  render-examples.sh  render-registry.sh  sync-publish-layout.sh  test.sh  validate-docs-output.mjs  validate-registry-records.mjs
scripts/tests/: validate-registry-records.test.mjs
