[workspace]
resolver = "2"
members = [
    "crates/pkl-reference",
    "crates/registry-validator",
    "crates/release-cut",
    "crates/search-index",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ubugeeei/registry.pkl"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
