[package]
name = "search-index"
version = "0.1.0"
description = "Build a static search index JSON from registry.pkl records."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "search-index"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
